[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/Scripts/Music.gd" type="Script" id=1]
[ext_resource path="res://Art/Sound/Music/Main-TitleMenuSoundtrack.ogg" type="AudioStream" id=2]
[ext_resource path="res://Art/Sound/Music/Main-GameplaySoundtrack.ogg" type="AudioStream" id=3]

[node name="Music" type="Node"]
script = ExtResource( 1 )

[node name="Main_TitleMenuSoundtrack" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -11.0

[node name="Main_GameplaySoundtrack" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -14.0

[connection signal="finished" from="Main_TitleMenuSoundtrack" to="." method="_on_MainTitleMenuSoundtrack_finished"]
[connection signal="finished" from="Main_GameplaySoundtrack" to="." method="_on_MainGamplaySoundtrack_finished"]
